feat: general adjustments in the routes

--- a/package.json
+++ b/package.json
@@ -4,37 +4,38 @@
   "type": "module",
   "private": true,
   "scripts": {
+    "generate": "drizzle-kit generate:pg",
     "dev": "bun --watch src/http/server.ts",
-    "build": "bun build src/http/server.ts --target bun --outdir ./dist",
-    "start": "NODE_ENV=production bun dist/http/server.js",
-    "test": "bun test",
-    "generate:dev": "drizzle-kit generate",
-    "migrate:dev": "drizzle-kit migrate",
-    "studio:dev": "drizzle-kit studio",
-    "seed:dev": "bun src/db/seed.ts",
-    "lint": "eslint --fix src --ext .ts"
+    "migrate": "bun src/db/migrate.ts",
+    "seed": "bun src/db/seed.ts"
   },
   "dependencies": {
-    "@elysiajs/cookie": "^0.8.0",
-    "@elysiajs/jwt": "^1.4.0",
-    "@paralleldrive/cuid2": "^3.1.0",
-    "dayjs": "^1.11.19",
-    "drizzle-orm": "^0.44.6",
-    "drizzle-typebox": "^0.3.3",
-    "elysia": "^1.4.12",
-    "nodemailer": "^7.0.10",
-    "postgres": "^3.4.7",
-    "zod": "^4.1.12"
+    "@elysiajs/cookie": "^0.7.0",
+    "@elysiajs/cors": "^0.7.2",
+    "@elysiajs/jwt": "^0.7.0",
+    "@paralleldrive/cuid2": "2.2.2",
+    "@react-email/components": "^0.0.11",
+    "dayjs": "^1.11.10",
+    "drizzle-orm": "^0.29.1",
+    "drizzle-typebox": "^0.1.1",
+    "elysia": "0.7.29",
+    "postgres": "3.4.3",
+    "react": "^18.2.0",
+    "resend": "^2.0.0",
+    "zod": "3.22.4"
   },
   "devDependencies": {
-    "@faker-js/faker": "^10.1.0",
-    "@rocketseat/eslint-config": "^2.2.2",
-    "@types/bun": "latest",
-    "@types/nodemailer": "^7.0.3",
-    "chalk": "^5.6.2",
-    "drizzle-kit": "^0.31.6",
-    "eslint": "^9.38.0",
-    "eslint-plugin-drizzle": "^0.2.3",
-    "typescript": "^5.9.3"
+    "@faker-js/faker": "8.3.1",
+    "@rocketseat/eslint-config": "2.1.0",
+    "@types/pg": "8.10.9",
+    "@types/react": "^18.2.39",
+    "bun-types": "^1.0.14",
+    "chalk": "5.3.0",
+    "drizzle-kit": "0.20.6",
+    "eslint": "8.54.0",
+    "eslint-plugin-drizzle": "^0.2.1",
+    "eslint_d": "13.1.1",
+    "pg": "^8.11.3",
+    "typescript": "5.3.2"
   }
 }
